# renovierungsapp

./: Gasprice.xlsx  Kosten_Renovierung.xlsx  Modernization_compass_test.csv  Modernization_compass_train.csv  README.md  building_data_4.csv  compass_app_V14.py  compass_app_V15.py  pyproject.toml  requirements  umsatzpotentzial.xlsx
