[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.9"
pandas = "^1.4.2"
streamlit = "^1.9.0"
xgboost = "^1.6.1"
scikit-learn = "^1.1.3"
plotly = "^5.8.0"
geopandas = "^0.10.2"
Shapely = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
